--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -16,12 +16,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2019, macos-11]
+        os: [windows-latest, macos-latest]
         include:
-          - os: windows-2019
+          - os: windows-latest
             executable_ext: .exe
             executable_os: win
-          - os: macos-11
+          - os: macos-latest
             executable_ext: ""
             executable_os: macOS
 
@@ -48,7 +48,7 @@ jobs:
         run: poetry config virtualenvs.in-project true
 
       - name: Install dependencies
-        run: poetry install --no-dev --extras "pyinstaller"
+        run: poetry install --without dev
 
       - name: Get exectuable version name (non Windows)
         if: "!contains(matrix.os, 'windows')"
@@ -122,9 +122,9 @@ jobs:
           echo $matflow_vers_expected
           [ "$matflow_vers" = "$matflow_vers_expected" ]
 
-      - name: Basic CLI checks
+      - name: Run test suite on the frozen app
         run: |
-          pyinstaller/dist/matflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} config get --all
+          pyinstaller/dist/matflow-${{ env.vers }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} test
 
   build-executables-linux:
     runs-on: ubuntu-latest
@@ -137,6 +137,7 @@ jobs:
 
       - name: Set ownership
         run: |
+          # see: https://github.com/actions/runner/issues/2033#issuecomment-1204205989
           # this is to fix GIT not liking owner of the checkout dir
           chown -R $(id -u):$(id -g) $PWD
 
@@ -150,7 +151,7 @@ jobs:
           key: venv-build-CentOS-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install dependencies
-        run: poetry install --no-dev --extras "pyinstaller"
+        run: poetry install --without dev
 
       - name: Get exectuable version name
         run: |
@@ -193,6 +194,6 @@ jobs:
           echo $matflow_vers_expected
           [ "$matflow_vers" = "$matflow_vers_expected" ]
 
-      - name: Basic CLI checks
+      - name: Run test suite on the frozen app
         run: |
-          pyinstaller/dist/matflow-${{ env.vers }}-linux config get --all
+          pyinstaller/dist/matflow-${{ env.vers }}-linux test
