--- a/.github/workflows/release.yml.in
+++ b/.github/workflows/release.yml.in
@@ -498,7 +498,8 @@ jobs:
         run: python -m pip install poetry==1.4
 
       - name: Configure poetry
-        run: poetry config virtualenvs.in-project true
+        run: |
+             poetry config virtualenvs.in-project true
              poetry config installer.modern-installation false
 
       - name: Install dependencies
