--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -127,7 +127,7 @@ jobs:
   build-executables-linux:
     runs-on: ubuntu-latest
     container:
-      image: aplowman/centos7-poetry
+      image: ghcr.io/hpcflow/centos7-poetry:latest
     steps:
       - uses: actions/checkout@v3
         with:
@@ -142,6 +142,7 @@ jobs:
       - name: Configure poetry
         run: |
           poetry config virtualenvs.in-project true
+          poetry config installer.modern-installation false
 
       - name: Cache the virtualenv
         uses: actions/cache@v3
