--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ packages = [
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
 pytest = {version = "^7.2.0", optional = true}
-hpcflow-new2 = "^0.2.0a36"
+hpcflow-new2 = "^0.2.0a42"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.12.2"
@@ -20,11 +20,12 @@ ipykernel = "^6.6.1"
 pytest = "^7.2.0"
 commitizen = "^2.20.3"
 pre-commit = "^2.16.0"
-Sphinx = "^4.4.0"
-pydata-sphinx-theme = "^0.8.0"
 sphinx-jinja = "^2.0.1"
 sphinx-copybutton = "^0.5.0"
 black = "^22.3.0"
+sphinx-click = "^4.4.0"
+sphinx = "^7.0.1"
+pydata-sphinx-theme = "^0.13.3"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.2.0"
@@ -36,7 +37,7 @@ pyinstaller = "^5.5"
 test = ["pytest"]
 
 [tool.poetry.scripts]
-matflow = 'matflow.cli:MatFlow.CLI'
+matflow = 'matflow.cli:cli'
 
 [tool.poetry.plugins.pyinstaller40]
 hook-dirs = "matflow.__pyinstaller:get_hook_dirs"
