--- a/matflow/data/command_files.yaml
+++ b/matflow/data/command_files.yaml
@@ -16,6 +16,10 @@
 - label: damask_hdf5_file
   name:
     name: geom_load.hdf5
+- label: damask_viz_files
+  name:
+    name: ((?:geom_load_inc\d+|static_outputs).vt(i|r))
+    is_regex: true
 - label: lammps_atoms_file
   name:
     name: atoms.lammps
