--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,12 @@ packages = [
 python = ">=3.8,<3.12"
 pytest = {version = "^7.2.0", optional = true}
 hpcflow-new2 = "^0.2.0a69"
+pyvista = "^0.41.1"
+scipy = ">=1.10,<2.0"
+trame = "^3.0.2"
+trame-vuetify = "^2.3.1"
+trame-vtk = "^2.5.8"
+ipywidgets = "^8.0.7"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.12.2"
