--- a/matflow/data/parameters.yaml
+++ b/matflow/data/parameters.yaml
@@ -61,3 +61,9 @@
 - type: compile
 - type: dump_path
 - type: yield_point # vol-avg equivalent plastic strain
+- type: yield_function_name
+- type: yield_point_criteria
+- type: fit_yield_fixed_parameters
+- type: fit_yield_initial_parameters
+- type: fit_yield_opt_parameters
+- type: fitted_yield_functions
